more header css

--- a/style.css
+++ b/style.css
@@ -5,25 +5,27 @@
 }
 
 header {
-    padding: 20px 35px;
+    padding: 5px 5px;
     background-color:dodgerblue;
     display: flex;
+    justify-content:space-evenly;
 }
 
 h1 {
-    text-align: center;
-    margin: 30px;
-    padding: 30px;
+    font-family:fantasy;
+    font-size: 40px;
+    margin: 20px;
+    padding: 20px;
 }
 
 header nav {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: flex-end;
     margin: 7px 0;
 }
 
 header nav ul {
+    font-size: 25px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
