--- a/style.css
+++ b/style.css
@@ -4,28 +4,30 @@
     padding: 0;
 }
 
+/*<--header-->*/
+
 header {
-    padding: 5px 5px;
     background-color:dodgerblue;
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-around;
 }
 
 h1 {
-    font-family:fantasy;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
-    margin: 20px;
+    color: floralwhite;
+    margin: 15px;
     padding: 20px;
 }
 
 header nav {
     display: flex;
     flex-wrap: wrap;
-    margin: 7px 0;
 }
 
 header nav ul {
     font-size: 25px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -34,9 +36,18 @@ header nav ul {
 }
 
 header nav ul li a {
-    padding: 10px 15px;
+    padding: 10px 40px;
 }
 
 header a {
+    text-decoration: none;
+    color:floralwhite;
+}
+
+header a:hover {
+    color:firebrick;
+}
+
+header a:visited {
     text-decoration: none;
 }
