--- a/assets/style.css
+++ b/assets/style.css
@@ -52,15 +52,56 @@ header a:visited {
     text-decoration: none;
 }
 
-body, html {
+body {
     height:100%;
-}
-
-.hero {
     background-image: url('./images/hero-image.jpg');
     background-size: cover;
     height: 100%;
     width: 100%;
-    position: relative;
+    position: absolute;
+}
 
+section {
+    padding: 60px;
+}
+
+.projects-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: -50px;
+}
+
+.project-info {
+    color: white;
+    font-size: 20px;
+    font-weight: bolder;
+    margin: 50px auto;
+    padding: 100px 200px;
+    border: 2px floralwhite solid;
+    border-width: 7px;
+    text-decoration: none;
+}
+
+.project-info:hover {
+    background-color: rgb(255, 250, 240, 0.6);
+}
+
+.project-info, a:link {
+    color: floralwhite;
+    text-decoration: none;
+}
+
+.project-info, a:visited {
+    text-decoration: none;
+    color:floralwhite;
+}
+
+h2 {
+    font-size: 50px;
+    color: white;
+    text-align: center;
+    padding: 50px 30px 0 20px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: lighter;
 }
