--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,16 @@ header a:visited {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
-    background-attachment: fixed;
+    background-attachment: absolute;
+}
+
+.hero, h2 {
+    font-size: 50px;
+    color: white;
+    text-align: center;
+    padding: 16px 30px 0 20px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight:lighter;
 }
 
 .projects-section {
@@ -96,11 +105,26 @@ header a:visited {
     color:floralwhite;
 }
 
-.hero, h2 {
+
+h3 {
+    text-align: center;
     font-size: 50px;
+}
+
+.about-me-section {
+    background-color:forestgreen;
     color: white;
     text-align: center;
-    padding: 50px 30px 0 20px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight:lighter;
+    padding: 20px;
+    display: flex;
 }
+
+.about-me-section p {
+    font-size: 25px;
+    margin: 20px;
+    text-align: right;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+
