--- a/assets/style.css
+++ b/assets/style.css
@@ -86,7 +86,7 @@ h3 {
     font-size: 50px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color:whitesmoke;
-    margin-top: 25px;
+    margin-top: 60px;
 }
 
 .about-me-section {
@@ -155,6 +155,10 @@ p {
     display: flex;
     justify-content: center;
     padding: 40px;
+}
+
+.contact-section h3{
+    margin-top: 15px;
 }
 
 .contact-section ul {
