added media queries

--- a/assets/style.css
+++ b/assets/style.css
@@ -71,7 +71,7 @@ body {
     align-items: flex-start;
 }
 
-h3 {
+h2 {
     text-align: center;
     font-size: 50px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -170,7 +170,7 @@ p {
     margin-bottom: 0;
 }
 
-.contact-section h3 {
+.contact-section h2 {
     margin-top: 15px;
 }
 
@@ -193,6 +193,15 @@ p {
     text-decoration: none;
 }
 
+@media screen and (max-width: 1024px) {
+    
+    header nav ul li {
+        display: flex;
+        flex-wrap: wrap;
+        font-size: 30px;
+    }
+}
+
 @media screen and (max-width: 980px) {
 
     header {
@@ -202,7 +211,7 @@ p {
 
     header h1 {
         width: 100%;
-        text-align: center;
+        text-align: right;
         font-size: 40px;
         margin: auto;
     }
@@ -212,8 +221,14 @@ p {
         flex-direction: column;
         font-size: 25px;
         width: 100%;
-        justify-content: center;
         margin-right: 30px;
         margin-bottom: 5px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    header {
+        width: 100%;
+        justify-content: space-evenly;
     }
 }
