--- a/assets/style.css
+++ b/assets/style.css
@@ -195,40 +195,51 @@ p {
 
 @media screen and (max-width: 1024px) {
     
-    header nav ul li {
-        display: flex;
-        flex-wrap: wrap;
+    header {
+        display: block;
         font-size: 30px;
+        padding: 20px;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    header nav {
+        display: block;
+        text-align: center;
+        margin-bottom: 15px;
     }
 }
 
 @media screen and (max-width: 980px) {
 
-    header {
-        position: relative;
-        padding-bottom: 0;
-    }
-
-    header h1 {
-        width: 100%;
-        text-align: right;
-        font-size: 40px;
-        margin: auto;
-    }
-
     header nav ul li {
-        display: flex;
-        flex-direction: column;
-        font-size: 25px;
-        width: 100%;
-        margin-right: 30px;
-        margin-bottom: 5px;
+        position: relative;
     }
 }
 
-@media screen and (max-width: 425px) {
-    header {
-        width: 100%;
-        justify-content: space-evenly;
+@media screen and (max-width: 825px) {
+    header nav ul li {
+        font-size: 21px;
+        text-align: center;
     }
 }
+
+@media screen and (max-width: 749px) {
+    body {
+        width: fit-content;
+    }
+}
+
+@media screen and (max-width: 697px) {
+
+    header {
+        text-align: center;
+        }
+
+    body {
+        width: fit-content;
+    }
+}
+
