--- a/assets/style.css
+++ b/assets/style.css
@@ -260,6 +260,38 @@ p {
 
 /*media queries*/
 
+@media screen and (max-width: 697px) {
+
+    header {
+        text-align: center;
+        }
+
+    body {
+        width: fit-content;
+    }
+}
+
+@media screen and (max-width: 749px) {
+
+    body {
+        width: fit-content;
+    }
+}
+
+@media screen and (max-width: 825px) {
+    header nav ul li {
+        font-size: 21px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 980px) {
+
+    header nav ul li {
+        position: relative;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     
     header {
@@ -273,40 +305,9 @@ p {
     }
 
     header nav {
-        display: block;
-        text-align: center;
+        display: flex;
+        justify-content: space-evenly;
         margin-bottom: 15px;
-    }
-}
-
-@media screen and (max-width: 980px) {
-
-    header nav ul li {
-        position: relative;
-    }
-}
-
-@media screen and (max-width: 825px) {
-    header nav ul li {
-        font-size: 21px;
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 749px) {
-    body {
-        width: fit-content;
-    }
-}
-
-@media screen and (max-width: 697px) {
-
-    header {
-        text-align: center;
-        }
-
-    body {
-        width: fit-content;
     }
 }
 
